--- a/propertyapp/templates/agent.html
+++ b/propertyapp/templates/agent.html
@@ -53,107 +53,40 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0">
-          <div class="h-100 person">
-            <img
-              src="{% static 'assets/images/person_1-min.jpg' %}"
-              alt="Image"
-              class="img-fluid"
-            />
+        {% for Agent in agents %}
 
-            <div class="person-contents">
-              <h2 class="mb-0"><a href="#">James Doe</a></h2>
-              <span class="meta d-block mb-3">Real Estate Agent</span>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Facere officiis inventore cumque tenetur laboriosam, minus
-                culpa doloremque odio, neque molestias?
-              </p>
+          <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0">
+            <div class="h-100 person">
+              <img
+                src="/media/{{Agent.image}}"
+                alt="Image"
+                class="img-fluid"
+              />
 
-              <ul class="social list-unstyled list-inline dark-hover">
-                <li class="list-inline-item">
-                  <a href="#"><span class="icon-twitter"></span></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#"><span class="icon-facebook"></span></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#"><span class="icon-linkedin"></span></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#"><span class="icon-instagram"></span></a>
-                </li>
-              </ul>
+              <div class="person-contents">
+                <h2 class="mb-0"><a href="#">{{Agent.name}}</a></h2>
+                <span class="meta d-block mb-3">{{Agent.position}}</span>
+                <p>
+                  {{Agent.bio}}
+                </p>
+
+                <ul class="social list-unstyled list-inline dark-hover">
+                  <li class="list-inline-item">
+                    <a href="{{Agent.twitter_url}}"><span class="icon-twitter"></span></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="{{Agent.facebook_url}}"><span class="icon-facebook"></span></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="{{Agent.linkedin_url}}"><span class="icon-linkedin"></span></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="{{Agent.instagram_url}}"><span class="icon-instagram"></span></a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0">
-          <div class="h-100 person">
-            <img
-              src="{% static 'assets/images/person_2-min.jpg' %}"
-              alt="Image"
-              class="img-fluid"
-            />
-
-            <div class="person-contents">
-              <h2 class="mb-0"><a href="#">Jean Smith</a></h2>
-              <span class="meta d-block mb-3">Real Estate Agent</span>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Facere officiis inventore cumque tenetur laboriosam, minus
-                culpa doloremque odio, neque molestias?
-              </p>
-
-              <ul class="social list-unstyled list-inline dark-hover">
-                <li class="list-inline-item">
-                  <a href="#"><span class="icon-twitter"></span></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#"><span class="icon-facebook"></span></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#"><span class="icon-linkedin"></span></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#"><span class="icon-instagram"></span></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0">
-          <div class="h-100 person">
-            <img
-              src="{% static 'assets/images/person_3-min.jpg' %}"
-              alt="Image"
-              class="img-fluid"
-            />
-
-            <div class="person-contents">
-              <h2 class="mb-0"><a href="#">Alicia Huston</a></h2>
-              <span class="meta d-block mb-3">Real Estate Agent</span>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Facere officiis inventore cumque tenetur laboriosam, minus
-                culpa doloremque odio, neque molestias?
-              </p>
-
-              <ul class="social list-unstyled list-inline dark-hover">
-                <li class="list-inline-item">
-                  <a href="#"><span class="icon-twitter"></span></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#"><span class="icon-facebook"></span></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#"><span class="icon-linkedin"></span></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#"><span class="icon-instagram"></span></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
+          {% endfor %}
+</div>
 {% endblock content %}
