--- a/propertyapp/templates/contact.html
+++ b/propertyapp/templates/contact.html
@@ -20,7 +20,7 @@
               data-aos-delay="200"
             >
               <ol class="breadcrumb text-center justify-content-center">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'propertyapp:index' %}">Home</a></li>
                 <li
                   class="breadcrumb-item active text-white-50"
                   aria-current="page"
@@ -36,92 +36,64 @@
 
     <div class="section">
       <div class="container">
-        <div class="row">
-          <div
-            class="col-lg-4 mb-5 mb-lg-0"
-            data-aos="fade-up"
-            data-aos-delay="100"
-          >
-            <div class="contact-info">
-              <div class="address mt-2">
-                <i class="icon-room"></i>
-                <h4 class="mb-2">Location:</h4>
-                <p>
-                  43 Raymouth Rd. Baltemoer,<br />
-                  London 3910
-                </p>
+          <div class="row">
+              <!-- Dynamic Contact Info -->
+              <div class="col-lg-4 mb-5 mb-lg-0">
+                  <div class="contact-info">
+                      <div class="address mt-2">
+                          <i class="icon-room"></i>
+                          <h4 class="mb-2">Location:</h4>
+                          <p>{{ contact_info.location }}</p>
+                      </div>
+                      <div class="open-hours mt-4">
+                          <i class="icon-clock-o"></i>
+                          <h4 class="mb-2">Open Hours:</h4>
+                          <p>{{ contact_info.open_hours }}</p>
+                      </div>
+                      <div class="email mt-4">
+                          <i class="icon-envelope"></i>
+                          <h4 class="mb-2">Email:</h4>
+                          <p>{{ contact_info.email }}</p>
+                      </div>
+                      <div class="phone mt-4">
+                          <i class="icon-phone"></i>
+                          <h4 class="mb-2">Call:</h4>
+                          <p>{{ contact_info.phone }}</p>
+                      </div>
+                  </div>
               </div>
-
-              <div class="open-hours mt-4">
-                <i class="icon-clock-o"></i>
-                <h4 class="mb-2">Open Hours:</h4>
-                <p>
-                  Sunday-Friday:<br />
-                  11:00 AM - 2300 PM
-                </p>
+              <!-- Contact Form -->
+              <div class="col-lg-8">
+                  <form method="POST">
+                      {% csrf_token %}
+                      <div class="row">
+                          <div class="col-6 mb-3">
+                              <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+                          </div>
+                          <div class="col-6 mb-3">
+                              <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+                          </div>
+                          <div class="col-12 mb-3">
+                              <input type="text" name="subject" class="form-control" placeholder="Subject" required>
+                          </div>
+                          <div class="col-12 mb-3">
+                              <textarea name="message" cols="30" rows="7" class="form-control" placeholder="Message" required></textarea>
+                          </div>
+                          <div class="col-12">
+                              <input type="submit" value="Send Message" class="btn btn-primary">
+                          </div>
+                      </div>
+                  </form>
+                  {% if messages %}
+                  <div class="alert alert-success mt-3">
+                      {% for message in messages %}
+                          {{ message }}
+                      {% endfor %}
+                  </div>
+                  {% endif %}
               </div>
-
-              <div class="email mt-4">
-                <i class="icon-envelope"></i>
-                <h4 class="mb-2">Email:</h4>
-                <p>info@Untree.co</p>
-              </div>
-
-              <div class="phone mt-4">
-                <i class="icon-phone"></i>
-                <h4 class="mb-2">Call:</h4>
-                <p>+1 1234 55488 55</p>
-              </div>
-            </div>
           </div>
-          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <form action="#">
-              <div class="row">
-                <div class="col-6 mb-3">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Your Name"
-                  />
-                </div>
-                <div class="col-6 mb-3">
-                  <input
-                    type="email"
-                    class="form-control"
-                    placeholder="Your Email"
-                  />
-                </div>
-                <div class="col-12 mb-3">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Subject"
-                  />
-                </div>
-                <div class="col-12 mb-3">
-                  <textarea
-                    name=""
-                    id=""
-                    cols="30"
-                    rows="7"
-                    class="form-control"
-                    placeholder="Message"
-                  ></textarea>
-                </div>
-
-                <div class="col-12">
-                  <input
-                    type="submit"
-                    value="Send Message"
-                    class="btn btn-primary"
-                  />
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
       </div>
-    </div>
-    <!-- /.untree_co-section -->
+  </div>
 
   {% endblock content %}
