--- a/propertyapp/templates/index.html
+++ b/propertyapp/templates/index.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% load custom_filters %}
+
 
  {% block content %}
 
@@ -71,42 +73,31 @@
           <div class="col-12">
             <div class="property-slider-wrap">
               <div class="property-slider">
-               <!-- {% for item in items %} -->
-               
-                <div class="property-item">
-                  <a href="{% url 'propertyapp:propertySingle' %}" class="img">
-                    <img src="{% static 'assets/images/img_1.jpg' %}" alt="Image" class="img-fluid" />
-                  </a>
 
-                  <div class="property-content">
-                    <div class="price mb-2"><span>$1,291,000</span></div>
-                    <div>
-                      <span class="d-block mb-2 text-black-50"
-                        >5232 California Fake, Ave. 21BC</span
-                      >
-                      <span class="city d-block mb-3">California, USA</span>
-
-                      <div class="specs d-flex mb-4">
-                        <span class="d-block d-flex align-items-center me-3">
-                          <span class="icon-bed me-2"></span>
-                          <span class="caption">2 beds</span>
-                        </span>
-                        <span class="d-block d-flex align-items-center">
-                          <span class="icon-bath me-2"></span>
-                          <span class="caption">2 baths</span>
-                        </span>
-                      </div>
-
-                      <a
-                        href="{% url 'propertyapp:propertySingle' %}"
-                        class="btn btn-primary py-2 px-3"
-                        >See details</a
-                      >
-                    </div>
-                  </div>
-                </div>
-
-                <!-- {%  endfor %} -->
+                {% for property in featured_properties %}
+                
+                        <div class="property-item">
+                            <a href="{% url 'propertyapp:property_single' property.pk %}" class="img">
+                                <img src="{{ property.image.url }}" alt="{{ property.title }}" class="img-fluid">
+                            </a>
+                            <div class="property-content">
+                                <div class="price mb-2"><span>${{ property.price }}</span></div>
+                                <span class="d-block mb-2 text-black-50">{{ property.address }}</span>
+                                <span class="city d-block mb-3">{{ property.location }}</span>
+                                <div class="specs d-flex mb-4">
+                                    <span class="d-block d-flex align-items-center me-3">
+                                        <span class="icon-bed me-2"></span>
+                                        <span class="caption">{{ property.bedrooms }} Beds</span>
+                                    </span>
+                                    <span class="d-block d-flex align-items-center">
+                                        <span class="icon-bath me-2"></span>
+                                        <span class="caption">{{ property.bathrooms }} Baths</span>
+                                    </span>
+                                </div>
+                                <a href="{% url 'propertyapp:property_single' property.pk %}" class="btn btn-primary py-2 px-3">See details</a>
+                            </div>
+                        </div>
+                        {% endfor %}
                 <!-- .item -->
 
                
@@ -155,40 +146,40 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Voluptates, accusamus.
               </p>
-              <p><a href="#" class="learn-more">Learn More</a></p>
+              <p><a href="{% url 'propertyapp:properties' %}" class="learn-more">Learn More</a></p>
             </div>
           </div>
           <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="500">
             <div class="box-feature">
               <span class="flaticon-building"></span>
-              <h3 class="mb-3">Property for Sale</h3>
+              <h3 class="mb-3">Sale properties</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Voluptates, accusamus.
               </p>
-              <p><a href="#" class="learn-more">Learn More</a></p>
+              <p><a href="{% url 'propertyapp:sale' %}" class="learn-more">Learn More</a></p>
             </div>
           </div>
           <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
             <div class="box-feature">
               <span class="flaticon-house-3"></span>
-              <h3 class="mb-3">Real Estate Agent</h3>
+              <h3 class="mb-3">Do you need Real Estate Agent?</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Voluptates, accusamus.
               </p>
-              <p><a href="#" class="learn-more">Learn More</a></p>
+              <p><a href="{% url 'propertyapp:agent' %}" class="learn-more">Learn More</a></p>
             </div>
           </div>
           <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="600">
             <div class="box-feature">
               <span class="flaticon-house-1"></span>
-              <h3 class="mb-3">House for Sale</h3>
+              <h3 class="mb-3">Buy Properties</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Voluptates, accusamus.
               </p>
-              <p><a href="#" class="learn-more">Learn More</a></p>
+              <p><a href="{% url 'propertyapp:buy' %}" class="learn-more">Learn More</a></p>
             </div>
           </div>
         </div>
@@ -200,7 +191,7 @@
         <div class="row mb-5 align-items-center">
           <div class="col-md-6">
             <h2 class="font-weight-bold heading text-primary mb-4 mb-md-0">
-              Customer Says
+              Testimonial
             </h2>
           </div>
           <div class="col-md-6 text-md-end">
@@ -217,113 +208,35 @@
         </div>
         <div class="testimonial-slider-wrap">
           <div class="testimonial-slider">
-            <div class="item">
-              <div class="testimonial">
-                <img
-                  src="{% static 'assets/images/person_1-min.jpg' %}"
-                  alt="Image"
-                  class="img-fluid rounded-circle w-25 mb-4"
-                />
-                <div class="rate">
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                </div>
-                <h3 class="h5 text-primary mb-4">James Smith</h3>
-                <blockquote>
-                  <p>
-                    &ldquo;Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean.&rdquo;
-                  </p>
-                </blockquote>
-                <p class="text-black-50">Designer, Co-founder</p>
-              </div>
-            </div>
 
+            {% for Testimonial in testimonials %}
+            <!--.item -->
             <div class="item">
               <div class="testimonial">
                 <img
-                  src="{% static 'assets/images/person_2-min.jpg' %}"
+                  src="/media/{{Testimonial.image}}"
                   alt="Image"
                   class="img-fluid rounded-circle w-25 mb-4"
                 />
                 <div class="rate">
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                </div>
-                <h3 class="h5 text-primary mb-4">Mike Houston</h3>
+                  {% for _ in Testimonial.stars %}
+                      <span class="icon-star text-warning"></span>
+                  {% endfor %}
+              </div>
+                
+                <h3 class="h5 text-primary mb-4">{{Testimonial.name}}</h3>
                 <blockquote>
                   <p>
-                    &ldquo;Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean.&rdquo;
+                    &ldquo;{{Testimonial.message}}&rdquo;
                   </p>
                 </blockquote>
-                <p class="text-black-50">Designer, Co-founder</p>
+                <p class="text-black-50">{{Testimonial.designation}}</p>
               </div>
             </div>
+            <!--.item -->
 
-            <div class="item">
-              <div class="testimonial">
-                <img
-                  src="{% static 'assets/images/person_3-min.jpg' %}"
-                  alt="Image"
-                  class="img-fluid rounded-circle w-25 mb-4"
-                />
-                <div class="rate">
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                </div>
-                <h3 class="h5 text-primary mb-4">Cameron Webster</h3>
-                <blockquote>
-                  <p>
-                    &ldquo;Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean.&rdquo;
-                  </p>
-                </blockquote>
-                <p class="text-black-50">Designer, Co-founder</p>
-              </div>
-            </div>
+            {% endfor %}
 
-            <div class="item">
-              <div class="testimonial">
-                <img
-                  src="{% static 'assets/images/person_4-min.jpg' %}"
-                  alt="Image"
-                  class="img-fluid rounded-circle w-25 mb-4"
-                />
-                <div class="rate">
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                </div>
-                <h3 class="h5 text-primary mb-4">Dave Smith</h3>
-                <blockquote>
-                  <p>
-                    &ldquo;Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean.&rdquo;
-                  </p>
-                </blockquote>
-                <p class="text-black-50">Designer, Co-founder</p>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -448,7 +361,7 @@
           <h2 class="mb-4">Be a part of our growing real state agents</h2>
           <p>
             <a
-              href="#"
+              href="{% url 'propertyapp:apply_agent' %}"
               target="_blank"
               class="btn btn-primary text-white py-3 px-4"
               >Apply for Real Estate agent</a
@@ -475,108 +388,44 @@
           </div>
         </div>
         <div class="row">
+
+          {% for Agent in agents %}
+
           <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0">
             <div class="h-100 person">
               <img
-                src="{% static 'assets/images/person_1-min.jpg' %}"
+                src="/media/{{Agent.image}}"
                 alt="Image"
                 class="img-fluid"
               />
 
               <div class="person-contents">
-                <h2 class="mb-0"><a href="#">James Doe</a></h2>
-                <span class="meta d-block mb-3">Real Estate Agent</span>
+                <h2 class="mb-0"><a href="#">{{Agent.name}}</a></h2>
+                <span class="meta d-block mb-3">{{Agent.position}}</span>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Facere officiis inventore cumque tenetur laboriosam, minus
-                  culpa doloremque odio, neque molestias?
+                  {{Agent.bio}}
                 </p>
 
                 <ul class="social list-unstyled list-inline dark-hover">
                   <li class="list-inline-item">
-                    <a href="#"><span class="icon-twitter"></span></a>
+                    <a href="{{Agent.twitter_url}}"><span class="icon-twitter"></span></a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#"><span class="icon-facebook"></span></a>
+                    <a href="{{Agent.facebook_url}}"><span class="icon-facebook"></span></a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#"><span class="icon-linkedin"></span></a>
+                    <a href="{{Agent.linkedin_url}}"><span class="icon-linkedin"></span></a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#"><span class="icon-instagram"></span></a>
+                    <a href="{{Agent.instagram_url}}"><span class="icon-instagram"></span></a>
                   </li>
                 </ul>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0">
-            <div class="h-100 person">
-              <img
-                src="{% static 'assets/images/person_2-min.jpg' %}"
-                alt="Image"
-                class="img-fluid"
-              />
-
-              <div class="person-contents">
-                <h2 class="mb-0"><a href="#">Jean Smith</a></h2>
-                <span class="meta d-block mb-3">Real Estate Agent</span>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Facere officiis inventore cumque tenetur laboriosam, minus
-                  culpa doloremque odio, neque molestias?
-                </p>
-
-                <ul class="social list-unstyled list-inline dark-hover">
-                  <li class="list-inline-item">
-                    <a href="#"><span class="icon-twitter"></span></a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#"><span class="icon-facebook"></span></a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#"><span class="icon-linkedin"></span></a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#"><span class="icon-instagram"></span></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0">
-            <div class="h-100 person">
-              <img
-                src="{% static 'assets/images/person_3-min.jpg' %}"
-                alt="Image"
-                class="img-fluid"
-              />
-
-              <div class="person-contents">
-                <h2 class="mb-0"><a href="#">Alicia Huston</a></h2>
-                <span class="meta d-block mb-3">Real Estate Agent</span>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Facere officiis inventore cumque tenetur laboriosam, minus
-                  culpa doloremque odio, neque molestias?
-                </p>
-
-                <ul class="social list-unstyled list-inline dark-hover">
-                  <li class="list-inline-item">
-                    <a href="#"><span class="icon-twitter"></span></a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#"><span class="icon-facebook"></span></a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#"><span class="icon-linkedin"></span></a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#"><span class="icon-instagram"></span></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
+          {% endfor %}
+          
+          
         </div>
       </div>
     </div>
