--- a/propertyapp/templates/services.html
+++ b/propertyapp/templates/services.html
@@ -2,274 +2,82 @@
 
 {% load static %}
 
+{% block title %}Our Services{% endblock %}
 
- {% block content %}
-
-    <div
-      class="hero page-inner overlay"
-      style="background-image: url('{% static "assets/images/services.jpg" %}')"
-    >
-      <div class="container">
+{% block content %}
+<div class="hero page-inner overlay" style="background-image: url('{% static "assets/images/services.jpg" %}')">
+    <div class="container">
         <div class="row justify-content-center align-items-center">
-          <div class="col-lg-9 text-center mt-5">
-            <h1 class="heading" data-aos="fade-up">Services</h1>
-
-            <nav
-              aria-label="breadcrumb"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
-              <ol class="breadcrumb text-center justify-content-center">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li
-                  class="breadcrumb-item active text-white-50"
-                  aria-current="page"
-                >
-                  Services
-                </li>
-              </ol>
-            </nav>
-          </div>
+            <div class="col-lg-9 text-center mt-5">
+                <h1 class="heading" data-aos="fade-up">Services</h1>
+                <nav aria-label="breadcrumb" data-aos="fade-up" data-aos-delay="200">
+                    <ol class="breadcrumb text-center justify-content-center">
+                        <li class="breadcrumb-item"><a href="{% url 'propertyapp:index' %}">Home</a></li>
+                        <li class="breadcrumb-item active text-white-50" aria-current="page">Services</li>
+                    </ol>
+                </nav>
+            </div>
         </div>
-      </div>
     </div>
+</div>
 
-    <div class="section bg-light">
-      <div class="container">
+<div class="section bg-light">
+    <div class="container">
         <div class="row">
-          <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
-            <div class="box-feature mb-4">
-              <span class="flaticon-house mb-4 d-block"></span>
-              <h3 class="text-black mb-3 font-weight-bold">
-                Quality Properties
-              </h3>
-              <p class="text-black-50">
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts.
-              </p>
-              <p><a href="#" class="learn-more">Read more</a></p>
+            {% for Service in services %}
+            <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="{{ forloop.counter0|add:3 }}00">
+                <div class="box-feature mb-4">
+                    <img src="{{ Service.image.url }}" alt="{{ Service.title }}" class="img-fluid mb-3">
+                    <h3 class="text-black mb-3 font-weight-bold">{{ Service.title }}</h3>
+                    <p class="text-black-50">{{ Service.description }}</p>
+                    {% if Service.read_more_url %}
+                    <p><a href="{{ Service.read_more_url }}" class="learn-more">Read more</a></p>
+                    {% endif %}
+                </div>
             </div>
-          </div>
-          <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
-            <div class="box-feature mb-4">
-              <span class="flaticon-house-2 mb-4 d-block-3"></span>
-              <h3 class="text-black mb-3 font-weight-bold">Top Rated Agent</h3>
-              <p class="text-black-50">
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts.
-              </p>
-              <p><a href="#" class="learn-more">Read more</a></p>
-            </div>
-          </div>
-          <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="500">
-            <div class="box-feature mb-4">
-              <span class="flaticon-building mb-4 d-block"></span>
-              <h3 class="text-black mb-3 font-weight-bold">
-                Property for Sale
-              </h3>
-              <p class="text-black-50">
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts.
-              </p>
-              <p><a href="#" class="learn-more">Read more</a></p>
-            </div>
-          </div>
-          <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="600">
-            <div class="box-feature mb-4">
-              <span class="flaticon-house-3 mb-4 d-block-1"></span>
-              <h3 class="text-black mb-3 font-weight-bold">House for Sale</h3>
-              <p class="text-black-50">
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts.
-              </p>
-              <p><a href="#" class="learn-more">Read more</a></p>
-            </div>
-          </div>
-
-          <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
-            <div class="box-feature mb-4">
-              <span class="flaticon-house-4 mb-4 d-block"></span>
-              <h3 class="text-black mb-3 font-weight-bold">
-                Quality Properties
-              </h3>
-              <p class="text-black-50">
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts.
-              </p>
-              <p><a href="#" class="learn-more">Read more</a></p>
-            </div>
-          </div>
-          <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
-            <div class="box-feature mb-4">
-              <span class="flaticon-building mb-4 d-block-3"></span>
-              <h3 class="text-black mb-3 font-weight-bold">Top Rated Agent</h3>
-              <p class="text-black-50">
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts.
-              </p>
-              <p><a href="#" class="learn-more">Read more</a></p>
-            </div>
-          </div>
-          <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="500">
-            <div class="box-feature mb-4">
-              <span class="flaticon-house mb-4 d-block"></span>
-              <h3 class="text-black mb-3 font-weight-bold">
-                Property for Sale
-              </h3>
-              <p class="text-black-50">
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts.
-              </p>
-              <p><a href="#" class="learn-more">Read more</a></p>
-            </div>
-          </div>
-          <div class="col-6 col-lg-3" data-aos="fade-up" data-aos-delay="600">
-            <div class="box-feature mb-4">
-              <span class="flaticon-house-1 mb-4 d-block-1"></span>
-              <h3 class="text-black mb-3 font-weight-bold">House for Sale</h3>
-              <p class="text-black-50">
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts.
-              </p>
-              <p><a href="#" class="learn-more">Read more</a></p>
-            </div>
-          </div>
+            {% endfor %}
         </div>
-      </div>
     </div>
+</div>
 
-    <div class="section sec-testimonials">
-      <div class="container">
+<div class="section sec-testimonials">
+    <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-6">
-            <h2 class="font-weight-bold heading text-primary mb-4 mb-md-0">
-              Customer Says
-            </h2>
-          </div>
-          <div class="col-md-6 text-md-end">
-            <div id="testimonial-nav">
-              <span class="prev" data-controls="prev">Prev</span>
-
-              <span class="next" data-controls="next">Next</span>
+            <div class="col-md-6">
+                <h2 class="font-weight-bold heading text-primary mb-4 mb-md-0">Customer Says</h2>
             </div>
-          </div>
+            <div class="col-md-6 text-md-end">
+                <div id="testimonial-nav">
+                    <span class="prev" data-controls="prev">Prev</span>
+                    <span class="next" data-controls="next">Next</span>
+                </div>
+            </div>
         </div>
 
         <div class="row">
-          <div class="col-lg-4"></div>
+            <div class="col-lg-4"></div>
         </div>
         <div class="testimonial-slider-wrap">
-          <div class="testimonial-slider">
-            <div class="item">
-              <div class="testimonial">
-                <img
-                  src="images/person_1-min.jpg"
-                  alt="Image"
-                  class="img-fluid rounded-circle w-25 mb-4"
-                />
-                <div class="rate">
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
+            <div class="testimonial-slider">
+                {% for Testimonial in testimonials %}
+                <div class="item">
+                    <div class="testimonial">
+                        <img src="/media/{{ Testimonial.image }}" alt="Image" class="img-fluid rounded-circle w-25 mb-4">
+                        <div class="rate">
+                            {% for _ in Testimonial.stars %}
+                                <span class="icon-star text-warning"></span>
+                            {% endfor %}
+                        </div>
+                        <h3 class="h5 text-primary mb-4">{{ Testimonial.name }}</h3>
+                        <blockquote>
+                            <p>&ldquo;{{ Testimonial.message }}&rdquo;</p>
+                        </blockquote>
+                        <p class="text-black-50">{{ Testimonial.designation }}</p>
+                    </div>
                 </div>
-                <h3 class="h5 text-primary mb-4">James Smith</h3>
-                <blockquote>
-                  <p>
-                    &ldquo;Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean.&rdquo;
-                  </p>
-                </blockquote>
-                <p class="text-black-50">Designer, Co-founder</p>
-              </div>
+                {% endfor %}
             </div>
-
-            <div class="item">
-              <div class="testimonial">
-                <img
-                  src="images/person_2-min.jpg"
-                  alt="Image"
-                  class="img-fluid rounded-circle w-25 mb-4"
-                />
-                <div class="rate">
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                </div>
-                <h3 class="h5 text-primary mb-4">Mike Houston</h3>
-                <blockquote>
-                  <p>
-                    &ldquo;Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean.&rdquo;
-                  </p>
-                </blockquote>
-                <p class="text-black-50">Designer, Co-founder</p>
-              </div>
-            </div>
-
-            <div class="item">
-              <div class="testimonial">
-                <img
-                  src="images/person_3-min.jpg"
-                  alt="Image"
-                  class="img-fluid rounded-circle w-25 mb-4"
-                />
-                <div class="rate">
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                </div>
-                <h3 class="h5 text-primary mb-4">Cameron Webster</h3>
-                <blockquote>
-                  <p>
-                    &ldquo;Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean.&rdquo;
-                  </p>
-                </blockquote>
-                <p class="text-black-50">Designer, Co-founder</p>
-              </div>
-            </div>
-
-            <div class="item">
-              <div class="testimonial">
-                <img
-                  src="images/person_4-min.jpg"
-                  alt="Image"
-                  class="img-fluid rounded-circle w-25 mb-4"
-                />
-                <div class="rate">
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                  <span class="icon-star text-warning"></span>
-                </div>
-                <h3 class="h5 text-primary mb-4">Dave Smith</h3>
-                <blockquote>
-                  <p>
-                    &ldquo;Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean.&rdquo;
-                  </p>
-                </blockquote>
-                <p class="text-black-50">Designer, Co-founder</p>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
-
-  {% endblock content %}
+</div>
+{% endblock %}
