--- a/propertyapp/templates/agent.html
+++ b/propertyapp/templates/agent.html
@@ -88,5 +88,23 @@
             </div>
           </div>
           {% endfor %}
+
+          <div class="section">
+            <div class="row justify-content-center footer-cta" data-aos="fade-up">
+              <div class="col-lg-7 mx-auto text-center">
+                <h2 class="mb-4">Be a part of our growing real state agents</h2>
+                <p>
+                  <a
+                    href="{% url 'propertyapp:apply_agent' %}"
+                    target="_blank"
+                    class="btn btn-primary text-white py-3 px-4"
+                    >Apply for Real Estate agent</a
+                  >
+                </p>
+              </div>
+              <!-- /.col-lg-7 -->
+            </div>
+            <!-- /.row -->
+          </div>
 </div>
 {% endblock content %}
