--- a/propertyapp/templates/blog.html
+++ b/propertyapp/templates/blog.html
@@ -13,7 +13,7 @@
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-9 text-center mt-5">
-            <h1 class="heading" data-aos="fade-up">Services</h1>
+            <h1 class="heading" data-aos="fade-up">Our Blogs</h1>
 
             <nav
               aria-label="breadcrumb"
