--- a/propertyapp/templates/contact.html
+++ b/propertyapp/templates/contact.html
@@ -35,7 +35,25 @@
     </div>
 
     <div class="section">
-      <div class="container">
+      <div class="col-lg-6 text-center mx-auto" style="margin-top: 30px; margin-bottom: 30px; padding: 15px;">
+        <h2 class="font-weight-bold text-primary heading" style="margin: 20px 0; padding: 10px 15px; font-size: 2rem; border-bottom: 3px solid #007bff;">
+          Your Trusted Partner in Buying, Selling, and Exploring Propertie
+
+        </h2>
+        <p style="margin-top: 10px; color: #6c757d; font-size: 1rem;">
+          Have questions about buying or selling your property? Interested in viewing our exclusive listings 
+          or scheduling a property tour? We're here to help!
+        </p>
+        <p style="margin-top: 10px; color: #6c757d; font-size: 1rem;">
+          Whether you're looking to find your dream home, list your property for sale, or need expert 
+          advice on the real estate market, our team of professionals is ready to assist you.
+        </p>
+        <p style="margin-top: 10px; color: #6c757d; font-size: 1rem;">
+          Contact us today to learn more about our services, schedule a viewing, or get a personalized consultation. 
+          Let’s make your real estate journey smooth and successful!
+        </p>
+    </div>
+    
           <div class="row">
               <!-- Dynamic Contact Info -->
               <div class="col-lg-4 mb-5 mb-lg-0">
