--- a/propertyapp/templates/accounts/login.html
+++ b/propertyapp/templates/accounts/login.html
@@ -1,27 +1,42 @@
-{% extends 'layout.html' %}
-
-{% block title %}Login{% endblock %}
-
-{% block content %}
-<div class="container my-5">
-    <div class="row justify-content-center">
-        <div class="col-lg-6">
-            <div class="card shadow border-0">
-                <div class="card-body p-5">
-                    <h2 class="text-center mb-4">Welcome Back</h2>
-                    <form method="post">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit" class="btn btn-primary btn-block">Login</button>
-                    </form>
-                    <hr>
-                    <p class="text-center mt-3">
-                        Don't have an account? <a href="{% url 'propertyapp:register' %}">Register here</a>.
-                    </p>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+    <meta charset="utf-8">
+    <title>Login Form </title>
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+</head>
+<body class="body_login">
+    <div class="wrapper">
+        <div class="title">
+            Login Form
+        </div>
+        <form method="post">
+            {% csrf_token %}
+            <div class="field">
+                <input type="text" name="username" required>
+                <label>Email Address</label>
+            </div>
+            <div class="field">
+                <input type="password" name="password" required>
+                <label>Password</label>
+            </div>
+            <div class="content">
+                <div class="checkbox">
+                    <input type="checkbox" id="remember-me">
+                    <label for="remember-me">Remember me</label>
+                </div>
+                <div class="pass-link">
+                    <a href="{% url 'password_change' %}">Forgot password?</a>
                 </div>
             </div>
-        </div>
+            <div class="field">
+                <input type="submit" value="Login">
+            </div>
+            <div class="signup-link">
+                Not a member? <a href="{% url 'propertyapp:register' %}">Signup now</a>
+            </div>
+        </form>
     </div>
-</div>
-{% endblock %}
-
+</body>
+</html>
