--- a/propertyapp/templates/apply_agent.html
+++ b/propertyapp/templates/apply_agent.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+ {% extends 'layout.html' %}
 
 {% block title %}Apply for Real Estate Agent{% endblock %}
 
@@ -6,8 +6,8 @@
 <div class="container my-5">
     <div class="row justify-content-center">
         <div class="col-lg-8">
-            <div class="card shadow border-0">
-                <div class="card-body p-5">
+            <div class="card_apply shadow border-0">
+                <div class="card-body_apply p-5 ">
                     <h2 class="text-center mb-4">Join Our Team</h2>
                     <form method="POST" novalidate>
                         {% csrf_token %}
@@ -37,3 +37,9 @@
     </div>
 </div>
 {% endblock %}
+
+
+
+
+
+
