--- a/propertyapp/templates/index.html
+++ b/propertyapp/templates/index.html
@@ -29,7 +29,7 @@
       <div class="row justify-content-center align-items-center">
           <div class="col-lg-9 text-center">
               <h1 class="heading" data-aos="fade-up">
-                  Easiest way to find your dream home
+                  Effortless Property Search, Just for You
               </h1>
               <form
                   action="#"
@@ -40,7 +40,7 @@
                   <input
                       type="text"
                       class="form-control px-4"
-                      placeholder="Your ZIP code or City. e.g. New York"
+                      placeholder="Your ZIP code or City. e.g. Nairobi"
                   />
                   <button type="submit" class="btn btn-primary">Search</button>
               </form>
@@ -153,8 +153,7 @@
               <span class="flaticon-house"></span>
               <h3 class="mb-3">Our Properties</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Voluptates, accusamus.
+             Our diverse property listings cater to every need, offering quality homes and spaces in prime locations.
               </p>
               <p><a href="{% url 'propertyapp:properties' %}" class="learn-more">Learn More</a></p>
             </div>
@@ -164,8 +163,7 @@
               <span class="flaticon-building"></span>
               <h3 class="mb-3">Sale properties</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Voluptates, accusamus.
+               Explore our wide range of properties for sale and find the perfect place to call your own.
               </p>
               <p><a href="{% url 'propertyapp:sell_property' %}" class="learn-more">Learn More</a></p>
             </div>
@@ -175,8 +173,7 @@
               <span class="flaticon-house-3"></span>
               <h3 class="mb-3">Do you need Real Estate Agent?</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Voluptates, accusamus.
+                Our experienced agents are here to guide you every step of the way in your property journey.
               </p>
               <p><a href="{% url 'propertyapp:agent' %}" class="learn-more">Learn More</a></p>
             </div>
@@ -186,8 +183,7 @@
               <span class="flaticon-house-1"></span>
               <h3 class="mb-3">Buy Properties</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Voluptates, accusamus.
+                Discover premium properties tailored to your needs, and make your dream home a reality.
               </p>
               <p><a href="{% url 'propertyapp:buy_properties' %}" class="learn-more">Learn More</a></p>
             </div>
@@ -260,8 +256,7 @@
               Let's find home that's perfect for you
             </h2>
             <p class="text-black-50">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              enim pariatur similique debitis vel nisi qui reprehenderit.
+              Your dream home is just a click away. Let us help you find the perfect place to live, tailored to your lifestyle and needs.
             </p>
           </div>
         </div>
@@ -279,8 +274,7 @@
               <div class="feature-text">
                 <h3 class="heading">2M Properties</h3>
                 <p class="text-black-50">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Nostrum iste.
+                 Choose from over 2 million verified property listings that match your needs and budget.
                 </p>
               </div>
             </div>
@@ -292,8 +286,7 @@
               <div class="feature-text">
                 <h3 class="heading">Top Rated Agents</h3>
                 <p class="text-black-50">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Nostrum iste.
+                  Work with experienced and trusted agents dedicated to making your property search seamless.
                 </p>
               </div>
             </div>
@@ -305,8 +298,7 @@
               <div class="feature-text">
                 <h3 class="heading">Legit Properties</h3>
                 <p class="text-black-50">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Nostrum iste.
+               Browse through a selection of thoroughly verified and authentic properties you can trust.
                 </p>
               </div>
             </div>
@@ -391,9 +383,7 @@
               Our Agents
             </h2>
             <p class="text-black-50">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              enim pariatur similique debitis vel nisi qui reprehenderit totam?
-              Quod maiores.
+            Our professional agents are committed to providing personalized guidance, ensuring a smooth and stress-free property journey.
             </p>
           </div>
         </div>
