--- a/propertyapp/templates/about.html
+++ b/propertyapp/templates/about.html
@@ -92,8 +92,7 @@
               <div class="feature-text">
                 <h3 class="heading">Quality properties</h3>
                 <p class="text-black-50">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Nostrum iste.
+                 Explore a curated selection of high-quality properties that meet your standards and exceed expectations.
                 </p>
               </div>
             </div>
@@ -105,8 +104,7 @@
               <div class="feature-text">
                 <h3 class="heading">Top rated agents</h3>
                 <p class="text-black-50">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Nostrum iste.
+                  Work with the best in the industry—agents who are dedicated to delivering exceptional service and expertise.
                 </p>
               </div>
             </div>
@@ -118,8 +116,7 @@
               <div class="feature-text">
                 <h3 class="heading">Easy and safe</h3>
                 <p class="text-black-50">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Nostrum iste.
+                Experience a hassle-free and secure platform designed to simplify your property search and transactions.
                 </p>
               </div>
             </div>
@@ -144,8 +141,7 @@
               <div class="feature-text">
                 <h3 class="heading">Quality properties</h3>
                 <p class="text-black-50">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Nostrum iste.
+                 Explore a curated selection of high-quality properties that meet your standards and exceed expectations.
                 </p>
               </div>
             </div>
@@ -157,8 +153,7 @@
               <div class="feature-text">
                 <h3 class="heading">Top rated agents</h3>
                 <p class="text-black-50">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Nostrum iste.
+                 Work with the best in the industry—agents who are dedicated to delivering exceptional service and expertise.
                 </p>
               </div>
             </div>
@@ -170,8 +165,7 @@
               <div class="feature-text">
                 <h3 class="heading">Easy and safe</h3>
                 <p class="text-black-50">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Nostrum iste.
+                Experience a hassle-free and secure platform designed to simplify your property search and transactions.
                 </p>
               </div>
             </div>
